# GameTest

./: README.md
code/: CMakeLists.txt  abstractobject.cpp  abstractobject.h  battle.cpp  battle.h  battlechecker.cpp  battlechecker.h  creatorfactory.cpp  creatorfactory.h  game.cpp  game.h  helper.hpp  logger.hpp  main.cpp  map.cpp  map.h  scenariobuilder.cpp  scenariobuilder.h  scenariocommand.cpp  scenariocommand.h  unit.cpp  unit.h  unitscollection.cpp  unitscollection.h  unitstate.cpp  unitstate.h  warrior.cpp  warrior.h
ubuntu_exec/: SW_Oleg_Test_clang_ubuntu  test.txt
